# c-argparser

./: .astylerc  .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  arg.c  arg.h  buf.h  macro.h  main.c  str.c  str.h  sum.h
.github/workflows/: ci.yml  embed.yml
include/arg/: arg.h  buf.h  gbuf.h  str.h  sum.h
simplified-api/: CMakeLists.txt  arg.c  main.c
simplified-api/include/arg/: arg.h  gbuf.h  macro.h
